Opened 18 years ago

Closed 18 years ago

#1331 closed bug (fixed)

broken pipes

Reported by: kaliber Owned by: axeld
Priority: high Milestone: R1
Component: File Systems/pipefs Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Random behaviour and "No space left on device" error:

~>grep a < /etc/termcap | wc -l 4366 ~>cat /etc/termcap | wc -l /bin/cat: write error: No space left on device 748 ~>cat /etc/termcap | wc -l /bin/cat: write error: No space left on device 2003 ~>cat /etc/termcap | wc -l /bin/cat: write error: No space left on device 1141 ~>cat /etc/termcap | wc -l /bin/cat: write error: No space left on device 1141 ~>cat /etc/termcap | wc -l /bin/cat: write error: No space left on device 1141 ~>cat /etc/termcap | wc -l /bin/cat: write error: No space left on device 748

Change History (2)

comment:1 by kaliber, 18 years ago

The first command should be:

~>wc -l < /etc/termcap 9998

Sorry for mistake.

comment:2 by axeld, 18 years ago

Component: - GeneralFile Systems/pipefs
Priority: normalhigh
Resolution: fixed
Status: newclosed

Fixed in hrev21830.

Note: See TracTickets for help on using tickets.