mmlr+bonefish(+axeld - I put the bug in there ;-)): * Inode::MayReleaseWriter() would release the semaphore too often; therefore,   Inode::WriteDataToBuffer() now loops in case it still couldn't write anything   instead of failing - this fixes a race condition (ie. a device is full message). * In case the read request got filled two times (while adding the request, and   after waiting for it to become filled), ReadRequest::PutBuffer() overwrote the   output data. This fixes bug #1331.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@21830 a95241bf-73f2-0310-859d-f6bbb57e9c96